# Maze-Wreckers

./: CMakeLists.txt  README.md  builder.sh  main.cpp
data/: tileset.xcf  worker.xcf
inc/: agent.hpp  commons.hpp  region.hpp  simulation.hpp
src/: .#agent.cpp  agent.cpp  ant.cpp  commons.cpp  region.cpp  simulation.cpp
